# sieve

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.example.json
.claude/hooks/: sieve_bash_rewrite.py
.cursor/: hooks.json  mcp.json
.cursor/hooks/: sieve_pre_shell.py
.cursor/rules/: sieve-agent-cli.mdc
benchmarks/: ci_repair_bench.py  corpus.py  run.py  swe_bench_compare.py  swe_bench_lite.py
benchmarks/manifests/: lite_50.jsonl  lite_full.jsonl  lite_smoke.jsonl  swe_bench_lite_auto_test_10.jsonl
docs/: agent-compress-architecture.jsx  agent-compress-specs.md
integrations/swe-bench-lite-cursor/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: analyze_run_tokens.py  export_swe_lite_manifest.py  prepare_swe_lite_container_workspace.py  run_codex_swe_bench_profiles.py  run_codex_swe_bench_profiles.sh  run_cursor_swe_bench_profiles.sh  run_swe_bench_profiles.py  run_swe_lite_harness.py  setup_codex_swe_bench_experiment.py  sieve_command_rewrite.py  sieved_run.py  swe_bench_harness_results.py  swebench_env.py
src/sieve/: __init__.py  api.py  config.py  core.py  delta.py  (+4 more)
tests/: test_analyze_run_tokens.py  test_ci_repair_bench.py  test_delta.py  test_fidelity.py  test_mcp_proxy.py  test_parsers.py  test_run_codex_swe_bench_profiles.py  test_session.py  test_setup_codex_swe_bench_experiment.py  test_sieve_command_rewrite.py  test_sieved_run.py  test_swe_bench_compare.py  test_swe_bench_harness_results.py  test_swe_bench_lite_benchmark.py  test_swe_bench_lite_cli.py  test_swe_bench_profiles.py
(+39 files in other folders)
