[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "sieve"
version = "0.1.0"
description = "Transparent feedback compression middleware for LLM coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[dependency-groups]
dev = ["mcp>=1.0.0"]
swe-eval = ["swebench>=4.0", "datasets>=2.14"]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/sieve"]
